finished PetFax app

--- a/petfax/templates/pets/show.html
+++ b/petfax/templates/pets/show.html
@@ -2,8 +2,9 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>PetFax || Pets</title>
+    <title>PetFax | Pets</title>
     <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
 </head>
 <body>
@@ -14,10 +15,9 @@
         </div>
         <div class="pets-container">
             <div class="show-pet">
-                <img src="{{ url_for('static', filename='assets/') }}{{ pet.pet_photo }}"/>
-            </div>
+                <img src="{{pet.pet_photo }}" alt="photo of pets"/>            </div>
         </div>
-        <a href="/pets">Go back</a>
+        <a href="/pets">⟨Go back</a>
     </div>
 </body>
 </html>
