--- a/petfax/templates/facts/new.html
+++ b/petfax/templates/facts/new.html
@@ -1,13 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>PetFax || Submit Fact</title>
+    <title>PetFax | Submit Facts</title>
     <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
 </head>
-
 <body>
     <div class="container">
         <H1>Submit Fax</H1>
@@ -15,22 +14,17 @@
             If you have some fun animal facts you'd like to share, please submit them! We may use them in the future.
         </div>
         <div class="facts-container">
-            <form>
-                <label for="submitter">
-                    <H2>Name</H2>
-                </label>
+            <form action="/facts" method="POST">
+                <label for="submitter"><H2>Name</H2></label>
                 <input name="submitter" type="text">
-                <br />
-                <label for="fact">
-                    <H2>Fact</H2>
-                </label>
+                <br/>
+                <label for="fact"><H2>Fact</H2></label>
                 <textarea name="fact"></textarea>
-                <br />
+                <br/>
                 <input type="submit" value="Submit the Fact">
             </form>
         </div>
-        <a href="/pets">Go back</a>
+        <a href="/pets">⟨Go back</a>
     </div>
 </body>
-
 </html>
