--- a/petfax/templates/pets/index.html
+++ b/petfax/templates/pets/index.html
@@ -2,8 +2,9 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>PetFax</title>
+    <title>PetFax | Pets</title>
     <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
 </head>
 <body>
@@ -16,15 +17,13 @@
             {% for pet in pets %}
                 <div class="pet">
                     <H2>{{ pet.pet_name }}</H2>
-                    <img src="{{pet.pet_photo }}" alt="photo of pets"/>
-                    <a href="/pets/{{ pet.pet_id }}">Learn more ⟩</a>
+                    <img src="{{pet.pet_photo }}" alt="photo of pets"/>                    <a href="/pets/{{ pet.pet_id }}">Learn more ⟩</a>
                 </div>
             {% endfor %}
         </div>
         <div class="callout">
-            We'd love to learn more fun facts! <a href="/facts/fact">Submit some here.</a>
+            We'd love to learn more fun facts! <a href="/facts/new">Submit some here.</a>
         </div>
     </div>
-
 </body>
 </html>
